adding sercive section

--- a/index.html
+++ b/index.html
@@ -31,5 +31,56 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="service-container">
+            <div class="service-info">
+                <button class="btn">Service List</button>
+                <h1 class="sercive-title"><span>Servicer</span> We can Help You With</h1>
+                <p class="service-description">
+                    Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra <br>libero habitasse porro fames quos pharetra  <br>diam cupidatat ligula! Netus! Quos dignissi mos laoreet.
+                </p><br><br>
+                    <li>Nobis ridiculus cupiditate egeastas Commodi</li>
+                    <li>Ipsum dui curabitur bapibuish mollitia.</li><br><br><br>
+                <!--Author Intro-->
+                    <div class="into">
+                        <div class="into-section">
+                            <div class="author-img">
+                                <img class="authors-pic" src="asset/image/author.jpg" alt="" class="intro-img">
+                            </div>
+                            <div class="author-into">
+                                <h3>George Smith</h3>
+                                <p>CEO,Director</p>
+                            </div>
+                        </div>
+                        <div class="btn">
+                            <button class="bg-primary">MORE DETAILS</button>
+                        </div>
+                    </div>
+            </div>
+            <div class="service-img">
+                    <div class="sercive-set-one">
+                        <div class="service-box">
+                            <img src="asset/icons/coding.png" alt="" class="service-logo">
+                            <h3>Web Development</h3>
+                        </div> <br>
+                        <div class="service-box">
+                            <img src="asset/icons/digital-marketing.png" alt="" class="service-logo">
+                            <h3>Digital Markting</h3>
+                        </div>
+                    </div>
+                    <div class="sercive-set-one">
+                        <div class="service-box">
+                            <img src="asset/icons/bar-chart.png" alt="" class="service-logo">
+                            <h3>Graphics Desging & Sketch</h3>
+                        </div> <br>
+                        <div class="service-box">
+                            <img src="asset/icons/startup.png" alt="" class="service-logo">
+                            <h3>SEO & Content Writing</h3>
+                        </div>
+                    </div>
+                    </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
